# cities-as-ecosystems

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  vcpkg.json
scripts/: build.py  build.sh  setup.sh  vcpkgInstall.py
scripts/linux/: build.sh  setup.sh
scripts/windows/: build.bat  setup.bat
src/: Buffer.cpp  Buffer.h  CommandUtils.cpp  CommandUtils.h  Device.cpp  Device.h  Extensions.cpp  Extensions.h  FileIO.cpp  FileIO.h  Image.cpp  Image.h  Instance.cpp  Instance.h  Main.cpp  MemoryUtils.cpp  MemoryUtils.h  Renderer.cpp  Renderer.h  Swapchain.cpp  Swapchain.h  pch.h
src/CAEngine/: CAEngine.cpp  CAEngine.h
src/VulkanRenderer/: Buffer.cpp  Buffer.h  Cleanup.cpp  Cleanup.h  Context.cpp  Context.h  DefaultCreateInfos.cpp  DefaultCreateInfos.h  Device.cpp  Device.h  Extensions.cpp  Extensions.h  ImGuiIntegration.cpp  ImGuiIntegration.h  Image.cpp  Image.h  Instance.cpp  Instance.h  Pipelines.cpp  Pipelines.h  Renderer.cpp  Renderer.h  RendererPCH.h  Shader.cpp  Shader.h  State.cpp  State.h  Swapchain.cpp  Swapchain.h
src/VulkanRenderer/vkcore/: ShaderLayout.cpp  ShaderLayout.h
src/VulkanRenderer/vkutils/: Commands.cpp  Commands.h  Device.cpp  Device.h  Memory.cpp  Memory.h  Synchronization.cpp  Synchronization.h
src/debug/: Assertions.h  Debug.h  ErrorHandler.h  Logging.h
src/debug/impl/vulkan/: ValidationLayers.cpp
src/debug/include/vulkan/: ValidationLayers.h
src/debug/stub/vulkan/: ValidationLayers.cpp
src/debug/vulkan/: ErrorChecking.h  ValidationLayers.cpp  ValidationLayers.h
src/shaders/: first.comp  first.frag  first.vert  frag.spv  second.comp
src/utils/: FileIO.cpp
